--- a/opFrontend/src/app/components/start-page/start-page.component.html
+++ b/opFrontend/src/app/components/start-page/start-page.component.html
@@ -1,5 +1,3 @@
-<p>Current Chapter: {{DataChapter.Chapter}}</p>
+<p>When: {{DataChapter.ChapterInDay}}</p>
 
-<p>Next Chapter Leak: {{DataChapter.Leak}}</p>
-
-<p>Next Official Chapter: {{DataChapter.Official}}</p>
+<p>Chapter: {{DataChapter.Chapter}}</p>
