--- a/opFrontend/src/app/components/start-page/start-page.component.html
+++ b/opFrontend/src/app/components/start-page/start-page.component.html
@@ -1,3 +1,22 @@
-<p>When: {{DataChapter.ChapterInDay}}</p>
+<body>
+    <div class="content">
+        <h2>Chapter</h2>
+        <h2>Chapter</h2>
+    </div>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        {{DataChapter.ChapterInDay}}
+    </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        {{DataChapter.Chapter}}
+    </a>
 
-<p>Chapter: {{DataChapter.Chapter}}</p>
+</body>
+
